# journal_track_grok

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  LICENSE  README.md  app.py  chatbot_utils.py  devops_architecture_explanation.md  docker-compose.yml  groq_service.py  init_db.py  models.py  populate_db.py  prometheus.yml  pyproject.toml  requirements.txt  research_service.py  routes.py  seed_data.py  setup_database.py  terraform.tfstate  test_groq.py  vercel.json
api/: index.py  requirements.txt
grafana/dashboards/: journal_tracker.json
grafana/provisioning/dashboards/: dashboards.yml
k8s/: deployment.yaml  ingress.yaml  postgres-deployment.yaml  postgres-pvc.yaml  secret.yaml  service.yaml
static/css/: custom.css
static/js/: chat.js  main.js
templates/: index.html  layout.html  login.html  notes.html  papers.html  patents.html  register.html
terraform/: main.tf  outputs.tf  variables.tf
